--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
         </a>
     </div>
 
+    <!-- LOADER -->
+    <div class="bar">
+    	<div id="loader" class="loader"></div>
+    </div>
+    <!-- LOADER END -->
+
+
+    <div id="container">
+       <div class="dragged">
+    		 <!-- DRAGGABLE DIV -->
+        <div class="box" draggable="true" ondragstart="dragstart_handler(event);"></div>
+    		 <!-- DRAGGABLE DIV END -->
+       </div>
+
+    <!-- 	DRAGGED DIVS -->
+       <div class="dragged"></div>
+    	 <div class="dragged"></div>
+    <!-- 	DRAGGED DIVS END -->
+    </div>
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
