--- a/index.html
+++ b/index.html
@@ -10,48 +10,49 @@
 <body>
 
   <div class="my_social">
-      <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
-          <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
-        </a>
-      <a href="https://stewilondanga.github.io/" class="social">
-          <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
-        </a>
-      <a href="https://twitter.com/stew_ilondanga" class="social">
-          <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
-        </a>
+    <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
+      <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
+    </a>
+    <a href="https://stewilondanga.github.io/" class="social">
+      <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
+    </a>
+    <a href="https://twitter.com/stew_ilondanga" class="social">
+      <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
+    </a>
+  </div>
+
+  <!-- LOADER -->
+  <div class="bar">
+    <div id="loader" class="loader"></div>
+  </div>
+  <!-- LOADER END -->
+
+
+  <div id="container">
+    <div class="dragged">
+      <!-- DRAGGABLE DIV -->
+      <div class="box" draggable="true" ondragstart="dragstart_handler(event);"></div>
+      <!-- DRAGGABLE DIV END -->
     </div>
-
-    <!-- LOADER -->
-    <div class="bar">
-    	<div id="loader" class="loader"></div>
-    </div>
-    <!-- LOADER END -->
-
-
-    <div id="container">
-       <div class="dragged">
-    		 <!-- DRAGGABLE DIV -->
-        <div class="box" draggable="true" ondragstart="dragstart_handler(event);"></div>
-    		 <!-- DRAGGABLE DIV END -->
-       </div>
 
     <!-- 	DRAGGED DIVS -->
-       <div class="dragged"></div>
-    	 <div class="dragged"></div>
+    <div class="dragged"></div>
+    <div class="dragged"></div>
     <!-- 	DRAGGED DIVS END -->
-    </div>
+  </div>
 
   <section id="contact">
     <div class="overlay">
       <div class="containers">
 
         <h1>
-<script>
-with(new Date)c=-new Date(y=getFullYear(),m=getMonth()).getDay(x=new Date(y,++m,0).getDate(b=-1))
-h='<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 '+' '+y+'/'+m+'<tr>'+'SuMoTuWeThFrSa'.replace(/(..)/g,'<th>$1')
-while((b++>5?b=0:b)|c<x)h+=(b?'':'<tr>')+'<td>'+(++c<1|c>x?'-':c);document.write(h+'</table>')
-</script>
-</h1>
+          <script>
+            with(new Date) c = -new Date(y = getFullYear(), m = getMonth()).getDay(x = new Date(y, ++m, 0).getDate(b = -1))
+            h = '<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 ' + ' ' + y + '/' + m + '<tr>' + 'SuMoTuWeThFrSa'.replace(/(..)/g, '<th>$1')
+            while ((b++ > 5 ? b = 0 : b) | c < x) h += (b ? '' : '<tr>') + '<td>' + (++c < 1 | c > x ? '-' : c);
+            document.write(h + '</table>')
+          </script>
+        </h1>
 
       </div>
     </div>
